// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-175 MuiOutlinedInput-root-160 MuiInputBase-colorSecondary-184 MuiOutlinedInput-colorSecondary-161 makeStyles-gasSelector-148 MuiInputBase-adornedStart-179 MuiOutlinedInput-adornedStart-164"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-149 MuiSelect-select-150 MuiSelect-selectMenu-153 MuiSelect-outlined-152 MuiInputBase-input-186 MuiOutlinedInput-input-170 MuiInputBase-inputAdornedStart-190 MuiOutlinedInput-inputAdornedStart-173"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-159"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193 MuiSelect-icon-155 MuiSelect-iconOutlined-158"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-206 MuiOutlinedInput-notchedOutline-169"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-207"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-contained-222 makeStyles-walletButton-213 MuiButton-containedSecondary-224 MuiButton-disableElevation-225"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-215"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-239 MuiButton-iconSizeMedium-241"
                >
                  <div
                    class="makeStyles-walletDot-210 makeStyles-greenDot-212"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-294"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-247 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-251 makeStyles-mainPapers-248 MuiPaper-elevation0-254 MuiPaper-rounded-252"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-118 MuiTypography-h5-127"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-text-216 makeStyles-learnMore-250 MuiButton-textPrimary-217 MuiButton-textSizeSmall-229 MuiButton-sizeSmall-235 MuiButton-fullWidth-237"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-215"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-294"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-291 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-118 MuiTypography-body1-120"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-175 MuiOutlinedInput-root-160 MuiInputBase-colorSecondary-184 MuiOutlinedInput-colorSecondary-161 makeStyles-gasSelector-148 MuiInputBase-adornedStart-179 MuiOutlinedInput-adornedStart-164"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-149 MuiSelect-select-150 MuiSelect-selectMenu-153 MuiSelect-outlined-152 MuiInputBase-input-186 MuiOutlinedInput-input-170 MuiInputBase-inputAdornedStart-190 MuiOutlinedInput-inputAdornedStart-173"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-159"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193 MuiSelect-icon-155 MuiSelect-iconOutlined-158"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-206 MuiOutlinedInput-notchedOutline-169"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-207"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-contained-222 makeStyles-walletButton-213 MuiButton-containedSecondary-224 MuiButton-disableElevation-225"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-215"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-239 MuiButton-iconSizeMedium-241"
                >
                  <div
                    class="makeStyles-walletDot-210 makeStyles-greenDot-212"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-294"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-247 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-251 makeStyles-mainPapers-248 MuiPaper-elevation0-254 MuiPaper-rounded-252"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-118 MuiTypography-h5-127"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-279 MuiSkeleton-text-280 makeStyles-center-246 MuiSkeleton-pulse-283"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-text-216 makeStyles-learnMore-250 MuiButton-textPrimary-217 MuiButton-textSizeSmall-229 MuiButton-sizeSmall-235 MuiButton-fullWidth-237"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-215"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-294"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-291 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-118 MuiTypography-body1-120"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-292 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-279 MuiSkeleton-rect-281 makeStyles-nftSkeleton-293 MuiSkeleton-pulse-283"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-175 MuiOutlinedInput-root-160 MuiInputBase-colorSecondary-184 MuiOutlinedInput-colorSecondary-161 makeStyles-gasSelector-148 MuiInputBase-adornedStart-179 MuiOutlinedInput-adornedStart-164"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-149 MuiSelect-select-150 MuiSelect-selectMenu-153 MuiSelect-outlined-152 MuiInputBase-input-186 MuiOutlinedInput-input-170 MuiInputBase-inputAdornedStart-190 MuiOutlinedInput-inputAdornedStart-173"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-159"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-193 MuiSelect-icon-155 MuiSelect-iconOutlined-158"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-206 MuiOutlinedInput-notchedOutline-169"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-207"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-contained-222 makeStyles-walletButton-213 MuiButton-containedSecondary-224 MuiButton-disableElevation-225"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-215"
              >
                Click to connect
                <span
                  class="MuiButton-endIcon-239 MuiButton-iconSizeMedium-241"
                >
                  <div
                    class="makeStyles-walletDot-210 makeStyles-redDot-211"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-279"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-247 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-251 makeStyles-mainPapers-248 MuiPaper-elevation0-254 MuiPaper-rounded-252"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <button
                    class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-contained-222 makeStyles-redeemButton-249 MuiButton-containedPrimary-223"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-215"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-279"
                    />
                  </button>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-243 MuiButton-root-214 MuiButton-text-216 makeStyles-learnMore-250 MuiButton-textPrimary-217 MuiButton-textSizeSmall-229 MuiButton-sizeSmall-235 MuiButton-fullWidth-237"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-215"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-279"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
